# kuiperbowl

./: .dockerignore  .env  .gitignore  .travis.yml  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  nginx.conf  nginx_sample.conf  notes.md  notes.txt  pyproject.toml  pytest.ini  requirements.txt  sample.env
.circleci/: config.yml
.github/workflows/: test.yml
docs/: DEPLOYMENT.md  DEPLOYMENT_AWS.md  DEPLOYMENT_UBUNTU.md  DESIGN.md  kuiperbowl.service  kuiperbowl_nginx.conf
docs/drawio/: Kuiperbowl.drawio
docs/puml/: BuzzAndAnswer.puml  ChangeName.puml  Join.puml  Leave.puml  Ping.puml
fixtures/: sample.json
game/: admin.py  consumers.py  judge.py  models.py  routing.py  tests.py  urls.py  utils.py  views.py
game/migrations/: 0001_initial.py  0002_auto_20181114_1729.py  0002_auto_20181114_2120.py  0002_auto_20181123_2029.py  0002_auto_20181123_2033.py  0002_auto_20181123_2035.py  0002_message.py  0002_message_visible.py  0002_remove_room_name.py  0003_auto_20181114_0914.py  0003_auto_20181114_1729.py  0003_auto_20181115_0927.py  0003_auto_20181123_2033.py  0003_room_change_locked.py  0004_auto_20181114_0915.py  0004_auto_20181115_1451.py  0004_auto_20181123_2033.py  0005_auto_20181115_1505.py  0006_auto_20181115_1507.py  0007_auto_20181115_1535.py  0008_auto_20181117_1418.py  0009_auto_20181118_0743.py  (+14 more)
nginx/: Dockerfile  README.md  nginx.conf  restart-cron
quizbowl/: asgi.py  routing.py  settings.py  urls.py
scripts/: clear_messages.py  clear_players.py  pb_load.py
web/: .gitignore  Dockerfile  README.md  logfile  requirements.txt
(+56 files in other folders)
