[project]
name = "kuiperbowl"
version = "0.1.0"
description = "Real-time multiplayer quizbowl"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "channels-redis==3.4.1",
    "channels==3.0.5",
    "django==4.2.18",
    "fuzzywuzzy>=0.18.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "python-levenshtein>=0.26.1",
    "legacy-cgi>=2.6.2",
    "daphne==3.0.2",
    "pytest>=8.3.4",
    "pytest-django>=4.10.0",
    "pytest-asyncio>=0.25.3",
    "black>=25.1.0",
]

[tool.black]
line-length = 79
extend-exclude = '''
/(
    | migrations
)/
'''